fixed width issue on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ select {
 
 
 .container {
-    width: 1200px;
     margin: auto;
     display: flex;
     flex-direction: column;
